[package]
name = "land-js"
version = "0.1.4-rc.2"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
once_cell = "1.18.0"
quickjs-wasm-rs = { git = "https://github.com/bytecodealliance/javy" }
send_wrapper = "0.6.0"
serde = { version = "1.0.188", features = ["derive"] }
#land-sdk = { path = "../runtime-land/crates/sdk" }
land-sdk = { git = "https://github.com/fuxiaohei/runtime-land" }
wit-bindgen = "0.12.0"
http = "0.2.9"
serde_bytes = "0.11.12"

[lib]
crate-type = ["cdylib"]
