[package]
name = "runtime-land-js"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
once_cell = "1.19.0"
quickjs-wasm-rs = "2.0.1"
send_wrapper = "0.6.0"
serde = { version = "1.0.193", features = ["derive"] }
land-sdk = { path = "../runtime-land/crates/sdk" }
#land-sdk = { git = "https://github.com/fuxiaohei/runtime-land" }
wit-bindgen = "0.16.0"
http = "1.0.0"
serde_bytes = "0.11.12"

[lib]
crate-type = ["cdylib"]
